// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAmendment renders adding a parcel 1`] = `
Array [
  <div
    className="ui header"
  >
    Amendment Request
  </div>,
  <p>
    Letter Of Credit / 
    <em>
      LC18-MER-1
    </em>
  </p>,
  <div
    className="ui divider"
  />,
  <div
    className="ui horizontal list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#5700b5",
          "fontWeight": "bold",
        }
      }
    >
      Trade
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Letter of credit
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Summary
    </div>
  </div>,
  <div
    className="ui hidden divider"
  />,
  .c0.c0.c0 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

<form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui block header c0"
    >
      Updates
    </div>
    <div
      className="ui basic segment"
    >
      <div>
        <strong
          className="ui checked checkbox"
          onChange={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <input
            checked={true}
            className="hidden"
            name="parcels.0"
            onClick={[Function]}
            readOnly={true}
            tabIndex={0}
            type="checkbox"
          />
          <label>
            Parcels 0
          </label>
        </strong>
        <div
          className="ui list"
          role="list"
          style={
            Object {
              "margin": "0px 0px 10px 30px",
              "padding": 0,
            }
          }
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
            style={
              Object {
                "padding": "5px 0 0 0",
              }
            }
          >
            <div
              className="content"
            >
              <div
                className="description"
                data-test-id="ICargo/parcels/0-current"
                style={
                  Object {
                    "fontSize": "0.9em",
                    "padding": 0,
                  }
                }
              >
                Current Value:
                <span
                  style={
                    Object {
                      "color": "#46484a",
                      "whiteSpace": "pre",
                    }
                  }
                >
                   
                  -
                </span>
              </div>
            </div>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
            style={
              Object {
                "padding": "5px 0 0 0",
              }
            }
          >
            <div
              className="content"
            >
              <div
                className="description"
                data-test-id="ICargo/parcels/0-new"
                style={
                  Object {
                    "fontSize": "0.9em",
                    "padding": 0,
                  }
                }
              >
                New Value:
                <span
                  style={
                    Object {
                      "color": "#009ea8",
                      "whiteSpace": "pre",
                    }
                  }
                >
                   
                  
  id: 1234
  laycanPeriod: 
    startDate: 2019/01/03
    endDate: 2019/01/03
  modeOfTransport: VESSEL
  vesselIMO: 1
  vesselName: Test
  loadingPort: Test
  dischargeArea: Test
  inspector: Test
  deemedBLDate: 2019/01/03
  quantity: 1

                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ui divider"
    />
    <div
      className="ui basic right aligned segment"
    >
      <button
        className="ui button"
        name="next"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Next
      </button>
    </div>
  </form>,
]
`;

exports[`CreateAmendment renders with nested cargo diffs 1`] = `
Array [
  <div
    className="ui header"
  >
    Amendment Request
  </div>,
  <p>
    Letter Of Credit / 
    <em>
      LC18-MER-1
    </em>
  </p>,
  <div
    className="ui divider"
  />,
  <div
    className="ui horizontal list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#5700b5",
          "fontWeight": "bold",
        }
      }
    >
      Trade
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Letter of credit
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Summary
    </div>
  </div>,
  <div
    className="ui hidden divider"
  />,
  .c0.c0.c0 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

<form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui block header c0"
    >
      Updates
    </div>
    <div
      className="ui basic segment"
    >
      <div>
        <strong
          className="ui checked checkbox"
          onChange={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <input
            checked={true}
            className="hidden"
            name="parcels.0.vesselName"
            onClick={[Function]}
            readOnly={true}
            tabIndex={0}
            type="checkbox"
          />
          <label>
            Parcels 0 Vessel Name
          </label>
        </strong>
        <div
          className="ui list"
          role="list"
          style={
            Object {
              "margin": "0px 0px 10px 30px",
              "padding": 0,
            }
          }
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
            style={
              Object {
                "padding": "5px 0 0 0",
              }
            }
          >
            <div
              className="content"
            >
              <div
                className="description"
                data-test-id="ICargo/parcels/0/vesselName-current"
                style={
                  Object {
                    "fontSize": "0.9em",
                    "padding": 0,
                  }
                }
              >
                Current Value:
                <span
                  style={
                    Object {
                      "color": "#46484a",
                      "whiteSpace": "pre",
                    }
                  }
                >
                   
                  Test
                </span>
              </div>
            </div>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
            style={
              Object {
                "padding": "5px 0 0 0",
              }
            }
          >
            <div
              className="content"
            >
              <div
                className="description"
                data-test-id="ICargo/parcels/0/vesselName-new"
                style={
                  Object {
                    "fontSize": "0.9em",
                    "padding": 0,
                  }
                }
              >
                New Value:
                <span
                  style={
                    Object {
                      "color": "#009ea8",
                      "whiteSpace": "pre",
                    }
                  }
                >
                   
                  boom!
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ui divider"
    />
    <div
      className="ui basic right aligned segment"
    >
      <button
        className="ui button"
        name="next"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Next
      </button>
    </div>
  </form>,
]
`;

exports[`CreateAmendment renders with trade diffs 1`] = `
Array [
  <div
    className="ui header"
  >
    Amendment Request
  </div>,
  <p>
    Letter Of Credit / 
    <em>
      LC18-MER-1
    </em>
  </p>,
  <div
    className="ui divider"
  />,
  <div
    className="ui horizontal list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#5700b5",
          "fontWeight": "bold",
        }
      }
    >
      Trade
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Letter of credit
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Summary
    </div>
  </div>,
  <div
    className="ui hidden divider"
  />,
  .c0.c0.c0 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

<form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui block header c0"
    >
      Updates
    </div>
    <div
      className="ui basic segment"
    >
      <div>
        <strong
          className="ui checked checkbox"
          onChange={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <input
            checked={true}
            className="hidden"
            name="price"
            onClick={[Function]}
            readOnly={true}
            tabIndex={0}
            type="checkbox"
          />
          <label>
            Price
          </label>
        </strong>
        <div
          className="ui list"
          role="list"
          style={
            Object {
              "margin": "0px 0px 10px 30px",
              "padding": 0,
            }
          }
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
            style={
              Object {
                "padding": "5px 0 0 0",
              }
            }
          >
            <div
              className="content"
            >
              <div
                className="description"
                data-test-id="ITrade/price-current"
                style={
                  Object {
                    "fontSize": "0.9em",
                    "padding": 0,
                  }
                }
              >
                Current Value:
                <span
                  style={
                    Object {
                      "color": "#46484a",
                      "whiteSpace": "pre",
                    }
                  }
                >
                   
                  73.14
                </span>
              </div>
            </div>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
            style={
              Object {
                "padding": "5px 0 0 0",
              }
            }
          >
            <div
              className="content"
            >
              <div
                className="description"
                data-test-id="ITrade/price-new"
                style={
                  Object {
                    "fontSize": "0.9em",
                    "padding": 0,
                  }
                }
              >
                New Value:
                <span
                  style={
                    Object {
                      "color": "#009ea8",
                      "whiteSpace": "pre",
                    }
                  }
                >
                   
                  100.00
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ui divider"
    />
    <div
      className="ui basic right aligned segment"
    >
      <button
        className="ui button"
        name="next"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Next
      </button>
    </div>
  </form>,
]
`;

exports[`CreateAmendment renders without data 1`] = `
Array [
  <div
    className="ui header"
  >
    Amendment Request
  </div>,
  <p>
    Letter Of Credit / 
    <em>
      LC18-MER-1
    </em>
  </p>,
  <div
    className="ui divider"
  />,
  <div
    className="ui horizontal list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Trade
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#5700b5",
          "fontWeight": "bold",
        }
      }
    >
      Letter of credit
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "undefined",
          "fontWeight": "bold",
        }
      }
    >
      Summary
    </div>
  </div>,
  <div
    className="ui hidden divider"
  />,
  .c0.c0.c0 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

.c1 {
  color: #5700b5;
  border: none;
  cursor: pointer;
  background-color: #ffffff;
}

.c1:focus {
  outline-color: #ffffff;
}

<form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui block header c0"
    >
      Updates
    </div>
    <div
      className="ui basic segment"
    >
      <button
        className="c1"
        color="#5700b5"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        + Add field
      </button>
    </div>
    <div
      className="ui divider"
    />
    <div
      className="ui basic right aligned segment"
    >
      <button
        className="ui button"
        name="previous"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Previous
      </button>
      <button
        className="ui button"
        name="next"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Next
      </button>
    </div>
  </form>,
]
`;

exports[`CreateAmendment renders without tradeFinanceManager.canManageLCRequests permission 1`] = `
<h1>
  You don't have enough permissions to view this page
</h1>
`;
